[package]
name = "yamdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
layout-rs = "0.1.1"
miniserde = "0.1.27"
pulldown-cmark = { version = "0.9.2", default-features = false }
rhai = { version = "1.11.0", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2.83" }
