[package]
name = "yamdr-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0"
clap = { version = "4.0.27", features = ["derive"] }
futures = "0.3.25"
md = { path = "../md" }
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"
