[package]
name = "md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layout-rs = "0.1.1"
pulldown-cmark = { version = "0.9.3", default-features = false }
rhai = "1.15.1"
kurbo = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
