[package]
name = "md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layout-rs = "0.1.1"
pulldown-cmark = { version = "0.9.6", default-features = false }
rhai = "1.16.3"
kurbo = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
plotters = "0.3.5"
tree-sitter-highlight = "0.20.1"
tree-sitter-go = "0.20.0"
tree-sitter-javascript = "0.20.1"
tree-sitter-rust = "0.20.4"
thiserror = "1.0.58"
