[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
md = { path = "../md" }
rhai = { version = "1.11.0", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2.83" }
